# xmlparser

./: Cargo.toml  build.rs
pkg/aur/: PKGBUILD
src/: cli.rs  config.rs  lib.rs  main.rs  sax.rs
src/c/: config.h  sax_funcs.c
src/c/include/libxml/: dict.h
src/headers/: libxml2.h  sax_funcs.h
src/parser_data/: mod.rs  path_node.rs  xml_tag.rs
test/: deep.xml  short.xml
