[package]
name = 'xmlparse'
version = '0.8.2'
authors = [ "Sal Bakra'a <SalBakraa@gmail.com>" ]
description = 'An extensible xml processing tool that converts xml data to a line oriented format similar to that of xpath.'
edition = '2018'
repository = 'https://github.com/SalBakraa/xmlparse'
license = 'GPL-3.0-or-later'

[dependencies]
cty = "0.2.1"
phf = { version = "0.9", features = ["macros"] } # For compile time hashmaps
clap = { version = "2.33.3", default-features = false }
once_cell = "1.8.0"

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0"
clap = { version = "2.33.3", default-features = false }
toml = "0.5.8"

[features]
pkgbuild = []
