[package]
name = 'xmlparse'
version = '0.10.0'
authors = [ "Sal Bakra'a <SalBakraa@gmail.com>" ]
description = 'An extensible xml processing tool that converts xml data to a line oriented format similar to that of xpath.'
edition = '2018'
repository = 'https://gitlab.com/SalBakraa/xmlparse'
license = 'GPL-3.0-or-later'

[dependencies]
cty = "0.2.1"
clap = { version = "2.33.3", default-features = false }

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0"
clap = { version = "2.33.3", default-features = false }
toml = "0.5.8"

[features]
pkgbuild = []
